[project]
name = "dio_blog"
version = "0.1.0"
description = ""
authors = [
    {name = "diegoff",email = "diegoff_@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "unicorn[standard] (>=2.1.4,<3.0.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "databases[aiosqlite,asyncpg]",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "psycopg2-binary"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
ruff = "^0.13.3"

